--- a/phonebill-android/app/src/main/res/values/strings.xml
+++ b/phonebill-android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Phone Bill</string>
 
     <string name="launch_calculator">Launch Calculator</string>
+    <string name="back_to_main">Back to Main</string>
 </resources>
